
See src/HOL/ex/Computations.thy,
src/HOL/Decision_Procs/Commutative_Ring.thy and
src/HOL/Decision_Procs/Reflective_Field.thy for examples and the
tutorial on code generation.


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Command-line invocation "isabelle jedit -R -l LOGIC" opens the ROOT
entry of the specified logic session in the editor, while its parent is
used for formal checking.

* The PIDE document model maintains file content independently of the
status of jEdit editor buffers. Reloading jEdit buffers no longer causes
changes of formal document content. Theory dependencies are always
resolved internally, without the need for corresponding editor buffers.
The system option "jedit_auto_load" has been discontinued: it is
effectively always enabled.

* The Theories dockable provides a "Purge" button, in order to restrict
the document model to theories that are required for open editor
buffers.

* Update to jedit-5.4.0.


*** HOL ***

* Constants E/L/F in Library/Formal_Power_Series were renamed to
fps_exp/fps_ln/fps_hypergeo to avoid polluting the name space.
INCOMPATIBILITY.

* Theory Totient in session Number_Theory introduces basic notions
about Euler's totient function previously hidden as solitary example
in theory Residues.  Minor INCOMPATIBILITY.

* Session "Computional_Algebra" covers many previously scattered
theories, notably Euclidean_Algorithm, Factorial_Ring, Formal_Power_Series,
Fraction_Field, Fundamental_Theorem_Algebra, Normalized_Fraction,
Polynomial_FPS, Polynomial, Primes.  Minor INCOMPATIBILITY.

* Constant "surj" is a full input/output abbreviation (again).
Minor INCOMPATIBILITY.

* Theory Library/FinFun has been moved to AFP (again).  INCOMPATIBILITY.

* Some old and rarely used ASCII replacement syntax has been removed.
INCOMPATIBILITY, standard syntax with symbols should be used instead.
The subsequent commands help to reproduce the old forms, e.g. to
simplify porting old theories:

syntax (ASCII)